--- a/packages/editor/editor-common/package.json
+++ b/packages/editor/editor-common/package.json
@@ -28,7 +28,7 @@
     "@atlaskit/media-card": "^56.0.0",
     "@atlaskit/mention": "^16.2.2",
     "@atlaskit/profilecard": "^8.0.0",
-    "@atlaskit/size-detector": "^7.0.0",
+    "@atlaskit/width-detector": "^0.2.1",
     "@atlaskit/theme": "^8.0.0",
     "@types/prosemirror-model": "^1.5.0",
     "@types/prosemirror-state": "^1.2.0",
