--- a/package.json
+++ b/package.json
@@ -215,6 +215,7 @@
     "react-lorem-component": "^0.12.2",
     "react-redux": "^5.0.0",
     "react-test-renderer": "^16.3.0",
+    "react-uid": "^2.2.0",
     "react-value": "^0.2.0",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
