CHANGESET: 9805e411. FS-3675 add ability for integrator to add title to popup picker

--- a/packages/elements/user-picker/package.json
+++ b/packages/elements/user-picker/package.json
@@ -13,6 +13,7 @@
     "@atlaskit/analytics-next": "^4.0.1",
     "@atlaskit/analytics-next-types": "^4.0.0",
     "@atlaskit/avatar": "^15.0.1",
+    "@atlaskit/field-base": "^12.0.0",
     "@atlaskit/icon": "^16.0.5",
     "@atlaskit/lozenge": "^7.0.0",
     "@atlaskit/select": "^8.0.3",
