--- a/packages/navigation/atlassian-switcher/tsconfig.json
+++ b/packages/navigation/atlassian-switcher/tsconfig.json
@@ -11,6 +11,7 @@
     "node_modules",
   ],
   "compilerOptions": {
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "baseUrl": "./",
