--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@findable/fabric",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "description": "Fabric components for Atlassian's Atlaskit",
   "main": "index.js",
