--- a/packages/editor/json-schema-generator/package.json
+++ b/packages/editor/json-schema-generator/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@findable/json-schema-generator",
   "version": "2.0.0",
-  "private": true,
+  "private": false,
   "description": "A CLI tool for generating JSON Schema from typescript",
   "license": "Apache-2.0",
   "author": "Atlassian Pty Ltd",
