--- a/packages/elements/xregexp-transformer/package.json
+++ b/packages/elements/xregexp-transformer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@findable/xregexp-transformer",
   "version": "2.0.0",
-  "private": true,
+  "private": false,
   "description": "Xregexp transformer to compile regex scripts to unicode charsets.",
   "author": "Atlassian Pty Ltd",
   "license": "Apache-2.0",
